--- a/src-99/utilities/_mixins.scss
+++ b/src-99/utilities/_mixins.scss
@@ -1,11 +1,11 @@
 
 /// Type Mixin - Shorthand for declaring style variations
-/// @param {string} $type - string to pass into [data-type]
+/// @param {string} $type - string to pass into [data-variant]
 /// @example scss - type() mixin
 ///   @include type('error') { color: red }
-///   // [data-type='error'] { color: red }
+///   // [data-variant='error'] { color: red }
 @mixin type($type) {
-  [data-type='#{$type}'] {
+  [data-variant='#{$type}'] {
     @content
   }
 }
